examples/network/9.3.0/submodules/vpc-serverless-connector-beta/README.md
# Terraform VPC Serverless Connector Beta

This submodule is part of the the `terraform-google-network` module. It creates the vpc serverless connector using the beta components available.

It supports creating:

- serverless connector
- serverless vpc access connector

## Usage

Basic usage of this submodule is as follows:

```hcl
module "serverless-connector" {
  source     = "terraform-google-modules/network/google//modules/vpc-serverless-connector-beta"
  project_id = <PROJECT ID>
  vpc_connectors = [{
    name            = "central-serverless"
    region          = "us-central1"
    subnet_name     = "<SUBNET NAME>"
    host_project_id = "<HOST PROJECT ID>"
    machine_type    = "e2-standard-4"
    min_instances   = 2
    max_instances   = 3
    max_throughput  = 300
  }]
}
```

<!-- BEGINNING OF PRE-COMMIT-TERRAFORM DOCS HOOK -->
## Inputs

| Name | Description | Type | Default | Required |
|------|-------------|------|---------|:--------:|
| project\_id | Project in which the vpc connector will be deployed. | `string` | n/a | yes |
| vpc\_connectors | List of VPC serverless connectors. | <pre>list(object({<br>    name            = string,<br>    region          = string,<br>    network         = optional(string, null),<br>    subnet_name     = optional(string, null),<br>    ip_cidr_range   = optional(string, null),<br>    host_project_id = optional(string, null),<br>    machine_type    = optional(string, null),<br>    min_instances   = optional(number, null),<br>    max_instances   = optional(number, null),<br>    max_throughput  = optional(number, null)<br>  }))</pre> | `[]` | no |

## Outputs

| Name | Description |
|------|-------------|
| connector\_ids | VPC serverless connector ID. |

<!-- END OF PRE-COMMIT-TERRAFORM DOCS HOOK -->

